added UpcomingEvents and NewlyAdded components for user home view. new SmallEventCard for these. updated small styling changes

--- a/frontend/src/styles/eventsearch.css
+++ b/frontend/src/styles/eventsearch.css
@@ -1,9 +1,9 @@
 /* Search and Filters */
 .event-search h2 {
   margin-bottom: 1rem;
-  color: #222;
+  /* color: #222;
   text-align: center;
-  font-size: 2rem;
+  font-size: 2rem; */
 }
 
 .search-input {
